# maybe-fut

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md
.cargo/: config.toml
.github/actions-rs/: grcov.yml
.github/workflows/: cargo.yml
forse-async/: Cargo.toml  build.rs
forse-async-derive/: Cargo.toml
forse-async-derive/src/: lib.rs
forse-async/src/: lib.rs  macros.rs  sync.rs
forse-async/src/fs/: file.rs
just/: build.just  publish.just
maybe-fut/: Cargo.toml  build.rs
maybe-fut-derive/: Cargo.toml
maybe-fut-derive/src/: args.rs  lib.rs  struct_derive.rs
maybe-fut-io-derive/: Cargo.toml
maybe-fut-io-derive/src/: lib.rs
maybe-fut-unwrap-derive/: Cargo.toml
maybe-fut-unwrap-derive/src/: lib.rs
maybe-fut/benches/: async_context.rs
maybe-fut/examples/: example.rs
maybe-fut/examples/fslib/: mod.rs
maybe-fut/src/: api.rs  context.rs  fs.rs  lib.rs  macros.rs  rt.rs  sync.rs  unwrap.rs
maybe-fut/src/api/: fs.rs  io.rs  net.rs  sync.rs  time.rs
maybe-fut/src/api/fs/: dir_builder.rs  dir_entry.rs  file.rs  open_options.rs  read_dir.rs
maybe-fut/src/api/io/: buf_reader.rs  buf_writer.rs  empty.rs  lines.rs  read.rs  repeat.rs  seek.rs  sink.rs  split.rs  stderr.rs  stdin.rs  stdout.rs  write.rs
maybe-fut/src/api/net/: tcp_listener.rs  tcp_stream.rs  udp_socket.rs
maybe-fut/src/api/sync/: barrier.rs  mutex.rs  rwlock.rs
maybe-fut/src/api/sync/mutex/: guard.rs
maybe-fut/src/api/sync/rwlock/: read_guard.rs  write_guard.rs
maybe-fut/src/api/time/: instant.rs
maybe-fut/src/fs/: file.rs
maybe-fut/tests/: macro_test_generics.rs  macro_test_structs.rs  macro_test_traits.rs
