[workspace]
members = ["maybe-fut", "maybe-fut-derive", "maybe-fut-unwrap-derive"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
repository = "https://github.com/veeso/maybe-fut"
license = "MIT"
keywords = [
  "async",
  "async-interop",
  "sync-async-interop",
  "async-rust",
  "async-sync",
]
categories = ["asynchronous"]

[workspace.dependencies]
cfg_aliases = "0.2"
pretty_assertions = "1"
proc-macro2 = "1"
quote = "1"
syn = "2"
tempfile = "3"
tokio = { version = "1", default-features = false }
