[package]
name = "forse-async"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/forse-async/"
description = "A library to build totally interoperable async/sync Rust code"
include = ["src/**/*", "../LICENSE", "../README.md", "../CHANGELOG.md"]
readme = "../README.md"


[lib]
name = "forse_async"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }

[features]
default = []
full = ["tokio", "tokio-fs", "tokio-sync"]
tokio = ["dep:tokio"]
tokio-fs = ["tokio", "tokio/fs"]
tokio-sync = ["tokio", "tokio/sync"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
