[package]
name = "maybe-fut-derive"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/maybe-fut/"
description = "maybe_fut derive crate for maybe-fut"
include = [
  "src/**/*",
  "../LICENSE",
  "../README.md",
  "../CHANGELOG.md",
  "../CODE_OF_CONDUCT.md",
]
readme = "../README.md"


[lib]
name = "maybe_fut_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
