[package]
name = "maybe-fut"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/maybe-fut/"
description = "A library to build totally interoperable async/sync Rust code"
include = [
  "examples/**/*",
  "src/**/*",
  "../LICENSE",
  "../README.md",
  "../CHANGELOG.md",
  "../CODE_OF_CONDUCT.md",
]
readme = "../README.md"


[lib]
name = "maybe_fut"
path = "src/lib.rs"

[dependencies]
maybe-fut-derive = { path = "../maybe-fut-derive", version = "0.1" }
maybe-fut-unwrap-derive = { path = "../maybe-fut-unwrap-derive", version = "0.1" }
tokio = { workspace = true, default-features = false, features = [
  "rt",
], optional = true }

[dev-dependencies]
criterion = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, default-features = true, features = ["full"] }

[build-dependencies]
cfg_aliases = { workspace = true }

[features]
default = []
full = ["tokio", "tokio-fs", "tokio-sync"]
tokio = ["dep:tokio"]
tokio-fs = ["tokio", "tokio/fs"]
tokio-sync = ["tokio", "tokio/sync"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "fs-client"
path = "examples/example.rs"
required-features = ["tokio-fs"]

[[bench]]
name = "async_context"
harness = false
